# ai-code-explainer

./: .gitignore  README.md  cli.py  explainer.py  parser.py  pyproject.toml  visualizer.py
.github/workflows/: ci.yml
ai_code_explainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  explainer.py  parser.py  visualizer.py
tests/: test_explainer.py  test_parser.py  test_visualizer.py
